--- a/src/webapp/WEB-INF/pages/add_user.html
+++ b/src/webapp/WEB-INF/pages/add_user.html
@@ -1,36 +1,59 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Добавление</title>
+    <title>Add new user</title>
 </head>
 <body>
 <div align="center">
-    <h1>Новый пользователь</h1>
+    <h1>New user</h1>
     <br/>
-    <form action="#" th:action="@{/save}" th:object="${user}"
+    <form action="#" th:action="@{/admin/save}" th:object="${user}"
           method="post">
 
         <table border="0" cellpadding="10">
             <tr>
-                <td>Имя:</td>
+                <td>Name:</td>
                 <td><input type="text" th:field="*{name}"/></td>
             </tr>
             <tr>
-                <td>Фамилия:</td>
+                <td>Surname:</td>
                 <td><input type="text" th:field="*{surname}"/></td>
             </tr>
             <tr>
-                <td>Профессия:</td>
+                <td>Profession:</td>
                 <td><input type="text" th:field="*{profession}"/></td>
             </tr>
             <tr>
+                <td>Login:</td>
+                <td><input type="text" th:field="*{login}"/></td>
+            </tr>
+            <tr>
+                <td>Password:</td>
+                <td><input type="password" th:field="*{password}"/></td>
+            </tr>
+            <tr>
+                <td>Role:</td>
+                <td>
+                    <select name = "chosenRoles" size="2" multiple id="selectRoles">
+                        <option th:each="role : ${allRoles}"
+                                th:text="${role.name}"
+                                th:value="${role.id}">
+                        </option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
                 <td colspan="2">
-                    <button type="submit">Сохранить пользователя</button>
+                    <button type="submit">Save</button>
                 </td>
             </tr>
         </table>
     </form>
+    <br/>
+    <a href="/admin/all_users">User list</a>
+    <br/><br/>
+    <a href="/logout">Log out</a>
 </div>
 </body>
 </html>
