--- a/src/webapp/WEB-INF/pages/error_page.html
+++ b/src/webapp/WEB-INF/pages/error_page.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div align="center">
-    <h1>Что-то пошло не так...</h1>
-    <p>Ошибка: <span th:text="${message.reason}">reason</span></p>
-    <p>Причина: <span th:text="${message.cause}">cause</span></p>
+    <h1>Error has occurred</h1>
+    <p>Error: <span th:text="${message.reason}">reason</span></p>
+    <p>Cause: <span th:text="${message.cause}">cause</span></p>
     <a href="/">OK</a>
 </div>
 </body>
