--- a/src/webapp/WEB-INF/pages/update_user.html
+++ b/src/webapp/WEB-INF/pages/update_user.html
@@ -1,40 +1,61 @@
-
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Добавление</title>
+    <title>Update user</title>
 </head>
 <body>
 <div align="center">
-    <h1>Редактирование</h1>
+    <h1>Update user</h1>
     <br/>
     <form action="#"
-          th:action="@{/update/{id}(id=${user.id})}"
+          th:action="@{/admin/update/{id}(id=${user.id})}"
           th:object="${user}"
           method="post">
 
         <table border="0" cellpadding="10">
             <tr>
-                <td>Имя:</td>
+                <td>Name:</td>
                 <td><input type="text" th:field="*{name}"/></td>
             </tr>
             <tr>
-                <td>Фамилия:</td>
+                <td>Surname:</td>
                 <td><input type="text" th:field="*{surname}"/></td>
             </tr>
             <tr>
-                <td>Профессия:</td>
+                <td>Profession:</td>
                 <td><input type="text" th:field="*{profession}"/></td>
             </tr>
             <tr>
+                <td>Login:</td>
+                <td><input type="text" th:field="*{login}"/></td>
+            </tr>
+            <tr>
+                <td>Password:</td>
+                <td><input type="text" th:field="*{password}"/></td>
+            </tr>
+            <tr>
+                <td>Role:</td>
+                <td>
+                    <select name="chosenRoles" size="2" multiple id="selectRoles" required>
+                        <option th:each="role : ${allRoles}"
+                                th:text="${role.name}"
+                                th:value="${role.id}"
+                                th:selected="${user.roles.contains(role)}">
+                        </option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
                 <td colspan="2">
-                    <button type="submit">Сохранить изменения</button>
+                    <button type="submit">Save</button>
                 </td>
             </tr>
         </table>
     </form>
-    <a href="/">Назад к списку</a>
+    <a href="/">User list</a>
+    <br/><br/>
+    <a href="/logout">Log out</a>
 </div>
 </body>
 </html>
